# erasmus-appsec

./: README.md
mobile/: AppSecMobile.key
mobile/android/: .gitignore  build.gradle  settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/gradle/wrapper/: gradle-wrapper.properties
mobile/flask/: .gitignore  Pipfile  app.py  init.sql  logfile  res.py  util.py
mobile/flask/db/: postgresql.conf  postmaster.opts  postmaster.pid
mobile/flask/db/base/1/: 1247_vm  1249_vm  1255  1259_vm  13867  2602_vm  2606  2610  2615_vm  2619  2662  2678  2682  2753_vm  2836  2840_vm  3079_vm  3600  3603_vm  3764_vm  pg_internal.init
mobile/flask/db/base/14033/: 1249  1255_vm  1259  (+19 more)
mobile/flask/db/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  pg_control  pg_internal.init
mobile/flask/db/pg_stat_tmp/: db_0.stat  db_1.stat  db_14034.stat  db_16384.stat  global.stat
mobile/flask/db_scripts/: init.sql
web/db_scripts/: init.sql
web/weblog-backend/: .gitignore  Cargo.toml  app.py  init.sql  res.py  util.py
web/weblog-backend/src/: main.rs
web/weblog-frontend/: package-lock.json  package.json
web/weblog-frontend/src/: App.tsx  Blog.tsx  FeaturedPost.tsx  Header.tsx  Main.tsx  SignIn.tsx  SignUp.tsx
web/weblog-frontend/src/components/: AddComment.tsx  Comment.tsx  FeaturedPost.tsx  Header.tsx  Main.tsx
web/weblog-frontend/src/models/: Models.tsx
web/weblog-frontend/src/pages/: Blog.tsx  BlogPost.tsx  NewBlogPost.tsx  SignIn.tsx  SignUp.tsx
(+128 files in other folders)
